feat: Removed the plugin_types crate and placed it into a module within plugin_manager. Updates to plugin_manager.rhai.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = [".", "plugin_types", "tests/plugin_inventory", "tests/plugin_mods", "tests/plugin_tasks"]
+members = [".", "tests/plugin_inventory", "tests/plugin_mods", "tests/plugin_tasks"]
 resolver = "3"
