--- a/plugin_manager/Cargo.toml
+++ b/plugin_manager/Cargo.toml
@@ -5,9 +5,6 @@ edition = "2024"
 authors = ["Andre Bowen-Brown <contact@genja.co.uk>"]
 description = "A flexible and easy-to-use plugin management system for Rust applications"
 license = "Apache-2.0"
-homepage = "https://github.com/smertan/plugin-manager"
-repository = "https://github.com/smertan/plugin-manager"
-documentation = "https://docs.rs/plugin-manager"
 readme = "README.md"
 keywords = ["plugin", "manager", "dynamic", "loading"]
 categories = ["development-tools", "rust-patterns"]
@@ -15,11 +12,11 @@ categories = ["development-tools", "rust-patterns"]
 [dependencies]
 libloading = "0.8.8"
 log = "0.4.28"
-plugin-types = { version = "0.1.0", path = "../plugin_types" }
+# plugin-types = { version = "0.1.0", path = "../plugin_types" }
 serde = { version = "1.0.225", features = ["derive"] }
 serde_json = "1.0.145"
 toml = "0.9.6"
-plugin-mods = { path = "../tests/plugin_mods" }
+# plugin-mods = { path = "../tests/plugin_mods" }
 
 # [dev-dependencies]
 # plugin-mods = { path = "../tests/plugin_mods" }
