--- a/tests/plugin_tasks/Cargo.toml
+++ b/tests/plugin_tasks/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-# plugin-manager = { path = "../../plugin_manager" }
-plugin-types = { path = "../../plugin_types" }
+plugin-manager = { path = "../../plugin_manager" }
+# plugin-types = { path = "../../plugin_types" }
 
 [lib]
 name = "plugin_tasks"
