feat: Updated the plugin_manager.rhai script to call the plugin_manager_pre.sh script to update the package names. Corrected directory name to use the {{ crate-name }} placeholder.

--- a/cargo-generate.toml
+++ b/cargo-generate.toml
@@ -8,8 +8,10 @@ ignore = [
 exclude = [
     "plugin_types/*/lib.rs",
     "**/plugin_types.rs"
-
 ]
+
+# [placeholders]
+# project_name = { prompt = "Enter the project name (plugin_manager will be appended): ", type = "string" }
 
 [hooks]
 pre = ["plugin_manager.rhai"]
