--- a/tests/plugin_inventory/Cargo.toml
+++ b/tests/plugin_inventory/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-plugin-manager = { path = "../../{{ project-name }}_plugin_manager" }
+plugin-manager = { path = "../../{{ crate_name }}_plugin_manager" }
 # plugin-types = { path = "../../plugin_types" }
 
 [lib]
