feat: workspace_manager script to update the destinations workspace Cargo.toml file with the directories needed for the plugin_manager.

--- a/cargo-generate.toml
+++ b/cargo-generate.toml
@@ -5,6 +5,9 @@ ignore = [
     "tests/target",
     "Cargo.lock",
     "plugin_manager_pre.sh",
+    "venv",
+    "./README.md",
+    "scripts/",
 ]
 
 exclude = [
