--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = [ ".", "tests/plugin_inventory", "tests/plugin_mods", "tests/plugin_tasks", "milas/plugin",]
+members = [ ".", "tests/plugin_inventory", "tests/plugin_mods", "tests/plugin_tasks", "scripts/workspace_manager"]
 resolver = "3"
