build: updated the workspace variable in the build_template.

--- a/.github/workflows/build_template.yml
+++ b/.github/workflows/build_template.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: cargo-generate/cargo-generate-action@latest
         with:
           name: ${{ env.PROJECT_NAME }}
-          arguments: "--allow-commands -d github-username=Smertan -d work_space=false"
+          arguments: "--allow-commands -d github-username=Smertan -d workspace=false"
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
